--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
+    <ion-title>Floor Plans</ion-title>
 
     <ion-buttons end>
       <button ion-button icon-only (click)="addItem()">
@@ -26,8 +26,8 @@
       </button>
 
       <ion-item-options>
-        <button ion-button color="danger" (click)="deleteItem(item)">
-          {{ 'DELETE_BUTTON' | translate }}
+        <button ion-button color="primary" (click)="openItem(item)">
+          View
         </button>
       </ion-item-options>
     </ion-item-sliding>
