--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header hidden="hidden">
   <ion-navbar>
     <ion-title>
       Home
@@ -6,9 +6,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <p>
-    This is a perfect starting point for a page with primarily text content. The
-    body is padded nicely and ready for prose.
-  </p>
+<ion-content padding no-bounce>
+  <section class="flex-container height-full">
+    <div class="flex-item flex-420px">
+      <img src="../../assets/img/pacwest_primary.svg" alt="Pacwest Primary logo" />
+    </div>
+  </section>
 </ion-content>
