Pass 2 on Future Page
More work on flex box controls for layout of Future Page.

--- a/src/pages/future/future.html
+++ b/src/pages/future/future.html
@@ -7,13 +7,13 @@
 </ion-header>
 
 <ion-content>
-  <section class="flex-container" style="height:320px;">
-    <div class="flex-item flex-420px">
+  <section class="flex-container" style="height:240px;">
+    <div class="flex-item flex-420px align-self-end">
       <h1 class="uppercase text-right" style="margin-right:8px;">
         Pacwest
       </h1>
     </div>
-    <div class="flex-item flex-420px">
+    <div class="flex-item flex-420px align-self-end">
       <h1 class="uppercase text-left yellow" style="margin-left:8px;">
         Transforming
       </h1>
@@ -25,7 +25,7 @@
   <section class="flex-container" style="height: 400px ;padding: 0;">
     <div class="flex-item flex-50per">
       <div class="flex-container justify-space-between">
-        <h2 class="uppercase text-right flex-item" style="padding-right: 2.4rem;">
+        <h2 class="uppercase text-right flex-item" style="padding-right: 2.4rem;padding-left:3.2rem;">
           <span class="yellow">Extraordinary fitness facility</span> with innovative equipment and architectural finishes designed to ignite tenants’ Fitness and Health Goals.
         </h2>
         <img src="http://placehold.it/184x300" class="flex-item" />
@@ -33,7 +33,7 @@
     </div>
     <div class="flex-item flex-50per">
       <div class="flex-container justify-space-between row-reverse">
-        <h2 class="uppercase text-left flex-item" style="padding-left: 2.4rem;">
+        <h2 class="uppercase text-left flex-item" style="padding-right:3.2rem;padding-left: 2.4rem;">
           <span class="yellow">Reimagined two story lobby</span> that will set a new standard of excellence for the office tenant of the future.
         </h2>
         <img src="http://placehold.it/184x300" class="flex-item" />
@@ -42,15 +42,15 @@
     <div class="verticalLine-full"></div>
   </section>
 
-  <section class="flex-container align-flex-end" style="height:440px;padding: 40px 0 0;">
-    <div class="flex-item flex-50per">
-      <h2 class="uppercase text-right" style="padding-right: 2.4rem;width:416px;float:right;">
+  <section class="flex-container align-stretch justify-flex-end" style="height:440px;padding: 40px 0 0;">
+    <div class="flex-item flex-50per align-self-end">
+      <h2 class="uppercase text-right" style="padding-right: 2.4rem;width:424px;float:right;">
         Engaging the city’s expanding cyclist population, pacwest is developing a lobby facing, <span class="yellow">indoor bicycle parking</span> facility with <span class="yellow">resort style showers and lockers</span>.
       </h2>
       <img src="http://placehold.it/420x400/444444" style="position:absolute;left:0;top:0;bottom:0;margin:auto;z-index:-1;" />
     </div>
-    <div class="flex-item flex-50per">
-      <h2 class="uppercase text-left" style="padding-left: 2.4rem;width:416px;float:left;">
+    <div class="flex-item flex-50per align-self-end">
+      <h2 class="uppercase text-left" style="padding-left: 2.4rem;width:480px;float:left;">
         <span class="yellow">Tenant lounge</span> with multi-sized conference and meeting facilities opening to <span class="yellow">a generously sized outdoor terrace</span> with large covered areas and outdoor living amenities.
       </h2>
       <img src="http://placehold.it/420x400/444444" style="position:absolute;right:0;top:0;bottom:0;margin:auto;z-index:-1;" />
