--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- cordova.js required for cordova apps -->
+  <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyB8NI8srBWgRS2oD54GXWfbAvk3V2UcAFc"></script> -->
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyBf3bbxmonk9vp5rpQX57kbQxJ2Ki14bgA"></script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
