--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,10 +6,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding no-bounce>
+<ion-content no-bounce class="full-background">
   <section class="flex-container height-full">
-    <div class="flex-item flex-420px">
-      <img src="../../assets/img/pacwest_primary.svg" alt="Pacwest Primary logo" />
+    <div class="flex-item flex-320px">
+      <img src="assets/img/pacwest_primary.svg" class="logo" alt="Pacwest Primary logo" type="image/svg+xml" />
     </div>
   </section>
 </ion-content>
