--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header hidden="hidden">
 
   <ion-navbar>
     <ion-title>Location</ion-title>
@@ -14,5 +14,5 @@
 
 
 <ion-content>
-  <div #map id="map"></div>
+  <div id="map"></div>
 </ion-content>
