--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,11 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <!-- Mapbox js and css -->
+  <script src='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet' />
+
   <!-- cordova.js required for cordova apps -->
-  <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyB8NI8srBWgRS2oD54GXWfbAvk3V2UcAFc"></script> -->
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyBf3bbxmonk9vp5rpQX57kbQxJ2Ki14bgA"></script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
