--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="cog"></ion-tab>
-  <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="boat"></ion-tab>
-  <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="pizza"></ion-tab>
-  <ion-tab [root]="tab5Root" [tabTitle]="tab5Title" tabIcon="car"></ion-tab>
-  <ion-tab [root]="tab6Root" [tabTitle]="tab6Title" tabIcon="leaf"></ion-tab>
+  <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="pacwest-home"></ion-tab>
+  <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="pacwest-future"></ion-tab>
+  <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="pacwest-floorplan"></ion-tab>
+  <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="pacwest-location"></ion-tab>
+  <ion-tab [root]="tab5Root" [tabTitle]="tab5Title" tabIcon="pacwest-vitals"></ion-tab>
+  <ion-tab [root]="tab6Root" [tabTitle]="tab6Title" tabIcon="pacwest-gallery"></ion-tab>
 </ion-tabs>
