LOCATION: Updated map
Updated map to include toggle for layers.

--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -7,6 +7,10 @@
 </ion-header>
 
 
-<ion-content>
-  <div id="map"></div>
+<ion-content no-bounce>
+  <div id="map">
+    <div id="filter-group-container">
+      <nav id="filter-group" class="filter-group"></nav>
+    </div>
+  </div>
 </ion-content>
