--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <!-- Load Plugins CSS -->
+  <link href="build/plugins/css/lightgallery.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -40,6 +43,10 @@
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+  <!-- Load Plugins JS Via CDN & BUILD-->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="build/plugins/js/lightgallery-all.min.js"></script>
 
 </body>
 </html>
