--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -7,40 +7,48 @@
 </ion-header>
 
 <ion-content class="lightGallery">
-  <ion-card *ngFor="let item of cardItems">
 
-    <ion-item>
-      <ion-avatar item-left>
-        <img [src]="item.user.avatar">
-      </ion-avatar>
-      <h2>{{item.user.name}}</h2>
-      <p>{{item.date}}</p>
-    </ion-item>
+  <section class="flex-container height-full">
+    <!-- <div class="flex-item flex-320px">
 
-    <img class="galleryItem" [src]="item.image" data-src="assets/img/advance-card-bttf.png">
+    </div> -->
+    <ion-card class="flex-item flex-320px" *ngFor="let item of cardItems">
 
-    <ion-card-content>
-      <p>{{item.content}}</p>
-    </ion-card-content>
+      <ion-item>
+        <ion-avatar item-left>
+          <img [src]="item.user.avatar">
+        </ion-avatar>
+        <h2>{{item.user.name}}</h2>
+        <p>{{item.date}}</p>
+      </ion-item>
 
-    <ion-row>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-left>
-            <ion-icon name='thumbs-up'></ion-icon>
-            12 Likes
-          </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-left>
-            <ion-icon name='text'></ion-icon>
-            4 Comments
-          </button>
-      </ion-col>
-      <ion-col center text-center>
-        <ion-note>
-          11h ago
-        </ion-note>
-      </ion-col>
-    </ion-row>
-  </ion-card>
+      <img class="galleryItem" [src]="item.image" data-src="assets/img/advance-card-bttf.png">
+
+      <ion-card-content>
+        <p>{{item.content}}</p>
+      </ion-card-content>
+
+      <ion-row>
+        <ion-col>
+          <button ion-button color="primary" clear small icon-left>
+              <ion-icon name='thumbs-up'></ion-icon>
+              12 Likes
+            </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button color="primary" clear small icon-left>
+              <ion-icon name='text'></ion-icon>
+              4 Comments
+            </button>
+        </ion-col>
+        <ion-col center text-center>
+          <ion-note>
+            11h ago
+          </ion-note>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+  </section>
+
+
 </ion-content>
