ADD: gallery; FIX location
Added gallery images and grid. Need to work on looping in the content
with an array and ngShow to toggle through galleries.

FIXED location bug and updated map to include amenities. Need to split
amenities to different sub groups. Add additional overlay content to
the page.

--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -9,9 +9,90 @@
 <ion-content class="lightGallery">
 
   <section class="flex-container height-full">
-    <!-- <div class="flex-item flex-320px">
+    <ion-grid>
+      <ion-row>
 
-    </div> -->
+        <!-- Main Gallery -->
+        <ion-col col-9>
+          <ion-card>
+            <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" data-src="assets/img/exterior/exterior-01.jpg" data-download-url="false" />
+          </ion-card>
+
+          <ion-row>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" data-src="assets/img/exterior/exterior-02.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" data-src="assets/img/exterior/exterior-03.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" data-src="assets/img/exterior/exterior-04.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" data-src="assets/img/exterior/exterior-05.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" data-src="assets/img/exterior/exterior-06.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-07.jpg" data-src="assets/img/exterior/exterior-07.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+            <ion-col col-3>
+              <ion-card>
+                <img class="galleryItem" src="assets/img/exterior/exterior-08.jpg" data-src="assets/img/exterior/exterior-08.jpg" data-download-url="false" />
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+
+        <!-- Aside -->
+        <ion-col col-3>
+
+          <ion-card>
+            <img class="" src="assets/img/exterior/exterior-01.jpg" />
+            <ion-card-content>
+              <ion-card-title>
+                Exterior Photos
+              </ion-card-title>
+            </ion-card-content>
+          </ion-card>
+
+          <ion-card>
+            <img class="" src="assets/img/interior/interior-01.jpg" />
+            <ion-card-content>
+              <ion-card-title>
+                Interior Photos
+              </ion-card-title>
+            </ion-card-content>
+          </ion-card>
+          <ion-card>
+
+            <img class="" src="assets/img/interior/interior-05.jpg" />
+            <ion-card-content>
+              <ion-card-title>
+                Renderings
+              </ion-card-title>
+            </ion-card-content>
+          </ion-card>
+          
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </section>
+
+  <!-- <section class="flex-container height-full">
     <ion-card class="flex-item flex-320px" *ngFor="let item of cardItems">
 
       <ion-item>
@@ -48,7 +129,7 @@
         </ion-col>
       </ion-row>
     </ion-card>
-  </section>
+  </section> -->
 
 
 </ion-content>
