--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -13,123 +13,157 @@
       <ion-row>
 
         <!-- Main Gallery -->
-        <ion-col col-9>
-          <ion-card>
-            <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" data-src="assets/img/exterior/exterior-01.jpg" data-download-url="false" />
-          </ion-card>
+        <ion-col col-10>
+          <div *ngIf="selectedGallery == 'exterior'">
+            <ion-card *ngFor="let item of galleryExterior" col-2>
+              <img class="galleryItem" [src]="item.image" />
+            </ion-card>
 
-          <ion-row>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" data-src="assets/img/exterior/exterior-02.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" data-src="assets/img/exterior/exterior-03.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" data-src="assets/img/exterior/exterior-04.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" data-src="assets/img/exterior/exterior-05.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" data-src="assets/img/exterior/exterior-06.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-07.jpg" data-src="assets/img/exterior/exterior-07.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-            <ion-col col-3>
-              <ion-card>
-                <img class="galleryItem" src="assets/img/exterior/exterior-08.jpg" data-src="assets/img/exterior/exterior-08.jpg" data-download-url="false" />
-              </ion-card>
-            </ion-col>
-          </ion-row>
+            <ion-row>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-07.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-2>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-08.jpg" />
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </div>
+
+
+
+          <div *ngIf="selectedGallery == 'interior'">
+            <ion-card>
+              <img class="galleryItem" src="assets/img/interior/interior-01.jpg" />
+            </ion-card>
+
+            <ion-row>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-02.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-03.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-04.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-05.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-06.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-07.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/interior/interior-08.jpg" />
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </div>
+
+
+          <div *ngIf="selectedGallery == 'rendering'">
+            <ion-card>
+              <img class="galleryItem" src="assets/img/exterior/exterior-01.jpg" />
+            </ion-card>
+
+            <ion-row>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-02.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-03.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-04.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-05.jpg" />
+                </ion-card>
+              </ion-col>
+              <ion-col col-3>
+                <ion-card>
+                  <img class="galleryItem" src="assets/img/exterior/exterior-06.jpg" />
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </div>
+
         </ion-col>
 
+
         <!-- Aside -->
-        <ion-col col-3>
+        <ion-col col-2>
+          <ion-list radio-group [(ngModel)]="selectedGallery">
+            <ion-item>
+              <ion-label for="exterior">Exterior Photos</ion-label>
+              <ion-radio #exterior id="exterior" value="exterior" (click)="selectedGallery = exterior.value"></ion-radio>
+            </ion-item>
 
-          <ion-card>
-            <img class="" src="assets/img/exterior/exterior-01.jpg" />
-            <ion-card-content>
-              <ion-card-title>
-                Exterior Photos
-              </ion-card-title>
-            </ion-card-content>
-          </ion-card>
+            <ion-item>
+              <ion-label>Interior Photos</ion-label>
+              <ion-radio #interior id="interior" value="interior" (click)="selectedGallery = interior.value"></ion-radio>>
+            </ion-item>
 
-          <ion-card>
-            <img class="" src="assets/img/interior/interior-01.jpg" />
-            <ion-card-content>
-              <ion-card-title>
-                Interior Photos
-              </ion-card-title>
-            </ion-card-content>
-          </ion-card>
-          <ion-card>
-
-            <img class="" src="assets/img/interior/interior-05.jpg" />
-            <ion-card-content>
-              <ion-card-title>
-                Renderings
-              </ion-card-title>
-            </ion-card-content>
-          </ion-card>
-          
+            <ion-item>
+              <ion-label>Renderings</ion-label>
+              <ion-radio #rendering id="rendering" value="rendering" (click)="selectedGallery = rendering.value"></ion-radio>
+            </ion-item>
+          </ion-list>
         </ion-col>
       </ion-row>
     </ion-grid>
   </section>
-
-  <!-- <section class="flex-container height-full">
-    <ion-card class="flex-item flex-320px" *ngFor="let item of cardItems">
-
-      <ion-item>
-        <ion-avatar item-left>
-          <img [src]="item.user.avatar">
-        </ion-avatar>
-        <h2>{{item.user.name}}</h2>
-        <p>{{item.date}}</p>
-      </ion-item>
-
-      <img class="galleryItem" [src]="item.image" data-src="assets/img/advance-card-bttf.png">
-
-      <ion-card-content>
-        <p>{{item.content}}</p>
-      </ion-card-content>
-
-      <ion-row>
-        <ion-col>
-          <button ion-button color="primary" clear small icon-left>
-              <ion-icon name='thumbs-up'></ion-icon>
-              12 Likes
-            </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button color="primary" clear small icon-left>
-              <ion-icon name='text'></ion-icon>
-              4 Comments
-            </button>
-        </ion-col>
-        <ion-col center text-center>
-          <ion-note>
-            11h ago
-          </ion-note>
-        </ion-col>
-      </ion-row>
-    </ion-card>
-  </section> -->
 
 
 </ion-content>
