UPDATES SCSS & Tutorial
Updated scss to pacwest brand colors.
Updated tutorial to include pacwest logo.

Need to update language on tutorial to fit marketing material.

--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -1,15 +1,7 @@
 <ion-header hidden="hidden">
-
   <ion-navbar>
     <ion-title>Floor Plans</ion-title>
-
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addItem()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 <ion-content>
@@ -32,4 +24,6 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+  <div id="background"></div>
 </ion-content>
