--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -7,20 +7,27 @@
 <ion-content no-bounce>
   <ion-slides [options]="{pager: true}" (ionWillChange)="onSlideChangeStart($event)">
     <ion-slide *ngFor="let slide of slides">
-      <div class="gContainer">
-        <img [src]="slide.image" class="slide-image"/>
-        <h2 class="slide-title" [innerHTML]="slide.title"></h2>
-        <p [innerHTML]="slide.description"></p>
+      <div class="flex-container height-full">
+        <div class="flex-item flex-75per">
+          <img [src]="slide.image" class="slide-image"/>
+          <h2 class="slide-title" [innerHTML]="slide.title"></h2>
+          <p [innerHTML]="slide.description"></p>
+        </div>
       </div>
     </ion-slide>
     <ion-slide>
-      <div class="gContainer">
-        <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-        <h2 class="slide-title">Ready to Play?</h2>
-        <button ion-button icon-right large clear (click)="startApp()">
-          Continue
-          <ion-icon name="arrow-forward"></ion-icon>
-        </button>
+      <div class="flex-container height-full">
+        <div class="flex-item flex-75per">
+          <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
+          <!-- <object class="svg-logo slide-image" type="image/svg+xml" data="assets/img/pacwest_stacked.svg" style="pointer-events:none;">
+            <img src="assets/img/pacwest_primary.jpg" class="img-responsive brand" alt="" />
+          </object> -->
+          <h2 class="slide-title">Let's Begin!</h2>
+          <button ion-button icon-right large clear (click)="startApp()">
+            Continue
+            <ion-icon name="arrow-forward"></ion-icon>
+          </button>
+        </div>
       </div>
     </ion-slide>
   </ion-slides>
