--- a/src/pages/floor-plans/floor-plans.html
+++ b/src/pages/floor-plans/floor-plans.html
@@ -15,7 +15,7 @@
           <ion-list no-lines>
             <ion-item>
               <h2>Suite 2700 | <span>15,524 sqft</span></h2>
-              <button #one ion-button color="primary" item-end (click)="presentModal('one')">
+              <button ion-button color="primary" item-end (click)="presentModal2700()">
                 View Plan
               </button>
             </ion-item>
@@ -29,7 +29,7 @@
           <ion-list no-lines>
             <ion-item class="flex-item">
               <h2>Suite 2600 | <span>15,524 sqft</span></h2>
-              <button #two ion-button color="primary" (click)="presentModal('two')">
+              <button ion-button color="primary" (click)="presentModal2600()">
                 View Plan
               </button>
             </ion-item>
@@ -44,7 +44,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 2220 | <span>3,886 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal2220()">
                   View Plan
                 </button>
               </span>
@@ -57,7 +57,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 2230 | <span>4,138 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal2230()">
                   View Plan
                 </button>
               </span>
@@ -70,7 +70,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 2250 | <span>4,410 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal2250()">
                   View Plan
                 </button>
               </span>
@@ -85,7 +85,7 @@
           <ion-list no-lines>
             <ion-item class="flex-item">
               <h2>Suite 2050 | <span>11,390 sqft</span></h2>
-              <button ion-button color="primary" (click)="openItem(item)">
+              <button ion-button color="primary" (click)="presentModal2050()">
                 View Plan
               </button>
             </ion-item>
@@ -100,7 +100,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 1440 | <span>4,127 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal1440()">
                   View Plan
                 </button>
               </span>
@@ -113,7 +113,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 1450 | <span>4,680 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal1450()">
                   View Plan
                 </button>
               </span>
@@ -128,7 +128,7 @@
           <ion-list no-lines>
             <ion-item class="flex-item">
               <h2>Suite 1220 | <span>3,629 sqft</span></h2>
-              <button ion-button color="primary" (click)="openItem(item)">
+              <button ion-button color="primary" (click)="presentModal1220()">
                 View Plan
               </button>
             </ion-item>
@@ -143,7 +143,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 730 | <span>2,038 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal730()">
                   View Plan
                 </button>
               </span>
@@ -156,7 +156,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 740 | <span>4,846 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal740()">
                   View Plan
                 </button>
               </span>
@@ -169,7 +169,7 @@
             <ion-item class="flex-item">
               <span>
                 <h2>Suite 790 | <span>980 sqft</span></h2>
-                <button ion-button color="primary" (click)="openItem(item)">
+                <button ion-button color="primary" (click)="presentModal790()">
                   View Plan
                 </button>
               </span>
@@ -184,7 +184,7 @@
           <ion-list no-lines>
             <ion-item>
               <h2>Suite 400 | <span>15,553 sqft</span></h2>
-              <button ion-button color="primary" item-end (click)="openItem(item)">
+              <button ion-button color="primary" item-end (click)="presentModal400()">
                 View Plan
               </button>
             </ion-item>
@@ -198,7 +198,7 @@
           <ion-list no-lines>
             <ion-item class="flex-item">
               <h2>Suite 300 | <span>10,764 sqft</span></h2>
-              <button ion-button color="primary" (click)="openItem(item)">
+              <button ion-button color="primary" (click)="presentModal300()">
                 View Plan
               </button>
             </ion-item>
@@ -212,12 +212,12 @@
   </div>
 
 
-  <!-- <div class="building ste2600"></div>
+  <div class="building ste2600"></div>
   <div class="building ste2200"></div>
   <div class="building ste2050"></div>
   <div class="building ste1400"></div>
   <div class="building ste1220"></div>
   <div class="building ste700"></div>
-  <div class="building ste300"></div> -->
+  <div class="building ste300"></div>
   <div id="background" class="building"></div>
 </ion-content>
